--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,54 +1,30 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: #d59191;
     margin: 0;
     padding: 0;
 }
+h1 {
+    font-size: 50px;
+}
 
 .container {
-    width: 80%;
-    margin: auto;
-    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
-h1, h2 {
-    text-align: center;
+#section1, #section2, #section3, #section4 {
+    margin: 20px;
 }
 
-.section {
-    margin: 20px 0;
-}
-
-label {
-    display: inline-block;
-    width: 100px;
-}
-
-input[type="text"] {
-    width: 200px;
-    padding: 5px;
+input {
+    width: 400px;
+    height: 50px;
 }
 
 button {
-    padding: 5px 10px;
-    background-color: #007BFF;
-    color: white;
-    border: none;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: #0056b3;
-}
-
-ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-li {
-    background: #fff;
-    margin: 5px 0;
-    padding: 10px;
-    border: 1px solid #ddd;
+    width: 50px;
+    height: 50px;
 }
